init esproxy, init website

--- a/src/index.html
+++ b/src/index.html
@@ -17,14 +17,20 @@
                 <form class="search">
                     <input
                         type="text"
-                        class="searchTerm"
+                        id="searchTerm"
                         placeholder="Searching URL..."
                     />
-                    <button type="submit" class="searchButton">
+                    <button type="submit" id="searchButton">
                         <i class="material-icons"> search </i>
                     </button>
                 </form>
-            <ul id="charactersList"></ul>
+            <ul id="charactersList">
+                <li class="contentBox">
+                    <h2 class="titleLink"><a href="https://www1.cs.ucr.edu/">UCR</a></h2>
+                    <h5 class="urlLink">https://www1.cs.ucr.edu/</h5>
+                    <p class="description">HELLO IM UCR</p>
+                </li>
+            </ul>
         </div>
         <script src="index.js"></script>
     </body>
