--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,18 @@
     <body>
         <div class="container">
             <h1>Wanna Search Something edu?</h1>
-                <form class="search">
-                    <input
-                        type="text"
-                        id="searchTerm"
-                        placeholder="Searching URL..."
-                    />
-                    <button type="submit" id="searchButton">
-                        <i class="material-icons"> search </i>
-                    </button>
-                </form>
-            <ul id="charactersList">
-                <li class="contentBox">
-                    <h2 class="titleLink"><a href="https://www1.cs.ucr.edu/">UCR</a></h2>
-                    <h5 class="urlLink">https://www1.cs.ucr.edu/</h5>
-                    <p class="description">HELLO IM UCR</p>
-                </li>
-            </ul>
+            <form action="#" class="search">
+                <input
+                    type="text"
+                    id="searchTerm"
+                    placeholder="Searching URL..."
+                />
+                <button type="submit" id="searchButton">
+                    <i class="material-icons"> search </i>
+                </button>
+            </form>
+            <ul id="contentsList"></ul>
+            <div id="loadWrapper"></div>
         </div>
         <script src="index.js"></script>
     </body>
