--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="container">
             <h1>Wanna Search Something edu?</h1>
-            <form action="#" class="search">
+            <form action="javascript:void(0)" class="search">
                 <input
                     type="text"
                     id="searchTerm"
